Fix erroneous word wrap on blocks

--- a/main.css
+++ b/main.css
@@ -89,6 +89,7 @@ main {
 
 #scratchblocks * {
     box-sizing: content-box;
+    white-space: nowrap;
 }
 
 #parse {
